--- a/MeetingClient/src/app/components/nav/nav.component.html
+++ b/MeetingClient/src/app/components/nav/nav.component.html
@@ -20,7 +20,9 @@
         <div class="btn-group" dropdown *ngIf="(accountService.currentUser$ | async) as user">
             <button id="button-basic" dropdownToggle type="button" class="btn dropdown-toggle btn-outline-primary"
                 aria-controls="dropdown-basic">
-                <img class="rounded-circle img-persion" src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.displayName}}"> <span class="caret"></span>
+                <img class="rounded-circle img-persion" src="{{user.photoUrl || './assets/user.png'}}" alt="{{user.displayName}}"> 
+                <span>{{user.displayName}}</span>
+                <span class="caret"></span>
             </button>
             <ul id="dropdown-basic" *dropdownMenu class="dropdown-menu" role="menu" aria-labelledby="button-basic">
                 <li role="menuitem"><a class="dropdown-item" routerLink="/avarta-managed">Avarta</a></li>
